--- a/Assignment6_neural_networks.ipynb
+++ b/Assignment6_neural_networks.ipynb
@@ -267,6 +267,25 @@
     },
     {
       "metadata": {
+        "id": "XJCgqF8EN9bk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "#define confusion matrix plot\n",
+        "def plot_confusion_matrix(matrix):\n",
+        "    \"\"\"If you prefer color and a colorbar\"\"\"\n",
+        "    fig = plt.figure(figsize=(8,8))\n",
+        "    ax = fig.add_subplot(111)\n",
+        "    cax = ax.matshow(matrix)\n",
+        "    fig.colorbar(cax)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "AdPaLlOYnc2D",
         "colab_type": "text"
       },
@@ -360,7 +379,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "c5765038-9b7e-4207-809d-f7e3055000b6"
+        "outputId": "85687605-476d-4234-b887-51b08b2582a3"
       },
       "cell_type": "code",
       "source": [
@@ -370,7 +389,7 @@
         "eval_results_test_2a = dnn_clf_2a.evaluate(input_fn=test_2a_input_fn)\n",
         "eval_results_test_2a"
       ],
-      "execution_count": 44,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +404,49 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "sR-qDxz5M0W5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "72110b36-ceef-4d51-d85d-3cc74aa45b7c"
+      },
+      "cell_type": "code",
+      "source": [
+        "#confusion matrix for 2a predictions\n",
+        "raw_predictions_2a = dnn_clf_2a.predict(input_fn=test_2a_input_fn)\n",
+        "predictions_2a = [p['class_ids'][0] for p in raw_predictions_2a]\n",
+        "confusion_matrix_2a = tf.confusion_matrix(y_test, predictions_2a)\n",
+        "\n",
+        "with tf.Session():\n",
+        "    print('\\nConfusion Matrix model 2a:\\n', tf.Tensor.eval(confusion_matrix_2a,feed_dict=None, session=None))"
+      ],
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Confusion Matrix model 2a:\n",
+            " [[ 946    0    2    1    2    7   13    6    1    2]\n",
+            " [   0 1122    2    2    1    1    2    2    3    0]\n",
+            " [  17   10  932   21    9    2    9    9   22    1]\n",
+            " [   2    0   26  916    2   25    1   14   17    7]\n",
+            " [   2    2    6    1  930    1    6    4    3   27]\n",
+            " [   6    4    3   21    8  804   10    8   22    6]\n",
+            " [  10    3    8    0    9   17  907    0    2    2]\n",
+            " [   3    7   18    5    3    0    0  958    4   30]\n",
+            " [   6    3    7   22    3   24    8    8  884    9]\n",
+            " [  10    6    0   11   17    7    0   17   12  929]]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -515,6 +576,48 @@
     },
     {
       "metadata": {
+        "id": "HCcN_jG-cLtm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "03bfae0c-f3b0-4820-e9d7-1f353938e963"
+      },
+      "cell_type": "code",
+      "source": [
+        "#confusion matrix for 2b predictions\n",
+        "raw_predictions_2b = dnn_clf_2b.predict(input_fn=test_2b_input_fn)\n",
+        "predictions_2b = [p['class_ids'][0] for p in raw_predictions_2b]\n",
+        "confusion_matrix_2b = tf.confusion_matrix(y_test, predictions_2b)\n",
+        "\n",
+        "with tf.Session():\n",
+        "    print('\\nConfusion Matrix model 2b:\\n', tf.Tensor.eval(confusion_matrix_2b,feed_dict=None, session=None))"
+      ],
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Confusion Matrix model 2b:\n",
+            " [[ 968    0    2    0    1    1    3    2    2    1]\n",
+            " [   0 1122    3    0    0    3    3    2    2    0]\n",
+            " [   2    2 1007    4    4    0    2    9    2    0]\n",
+            " [   0    0    3  988    0    5    0    3    5    6]\n",
+            " [   1    0    1    0  961    0    6    3    2    8]\n",
+            " [   0    0    0    9    1  872    5    1    2    2]\n",
+            " [   3    3    1    0    5    5  937    0    4    0]\n",
+            " [   1    1    7    1    1    0    0 1008    4    5]\n",
+            " [   5    0    1    5    3    5    1    3  948    3]\n",
+            " [   2    3    0    5    7    3    0    4    5  980]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "uxnJvUTMoPFz",
         "colab_type": "text"
       },
@@ -637,6 +740,48 @@
     },
     {
       "metadata": {
+        "id": "J5FcYWAycbjf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "5343cb0f-8e6d-4c47-ad5b-11fab360a1e0"
+      },
+      "cell_type": "code",
+      "source": [
+        "#confusion matrix for 5a predictions\n",
+        "raw_predictions_5a = dnn_clf_5a.predict(input_fn=test_5a_input_fn)\n",
+        "predictions_5a = [p['class_ids'][0] for p in raw_predictions_5a]\n",
+        "confusion_matrix_5a = tf.confusion_matrix(y_test, predictions_5a)\n",
+        "\n",
+        "with tf.Session():\n",
+        "    print('\\nConfusion Matrix model 5a:\\n', tf.Tensor.eval(confusion_matrix_5a,feed_dict=None, session=None))"
+      ],
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Confusion Matrix model 5a:\n",
+            " [[ 959    0    2    1    2    8    1    4    2    1]\n",
+            " [   0 1112    5    3    0    1    2    2    9    1]\n",
+            " [   5    4  959   16    5    9    8   11   14    1]\n",
+            " [   1    0   11  947    0   26    0   11   11    3]\n",
+            " [   2    2    5    0  942    0   11    2    1   17]\n",
+            " [   5    4    1   16    2  827    6    5   20    6]\n",
+            " [   9    2    2    0    8   12  921    0    4    0]\n",
+            " [   1    6   12    7    7    4    0  969    2   20]\n",
+            " [   6    3    4   16    6   19    2    3  906    9]\n",
+            " [   8    0    0    7   31    6    0   11   11  935]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "U0RE-42Lq8mk",
         "colab_type": "text"
       },
@@ -754,6 +899,48 @@
             "tags": []
           },
           "execution_count": 56
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "svAjOtusct0_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "077f67db-60c6-4935-bd5b-359c8dda052c"
+      },
+      "cell_type": "code",
+      "source": [
+        "#confusion matrix for 5b predictions\n",
+        "raw_predictions_5b = dnn_clf_5b.predict(input_fn=test_5b_input_fn)\n",
+        "predictions_5b = [p['class_ids'][0] for p in raw_predictions_5b]\n",
+        "confusion_matrix_5b = tf.confusion_matrix(y_test, predictions_5b)\n",
+        "\n",
+        "with tf.Session():\n",
+        "    print('\\nConfusion Matrix Model 5b:\\n', tf.Tensor.eval(confusion_matrix_5b,feed_dict=None, session=None))"
+      ],
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Confusion Matrix Model 5b:\n",
+            " [[ 967    1    1    0    2    1    3    1    3    1]\n",
+            " [   0 1123    5    0    0    0    2    1    4    0]\n",
+            " [   5    1 1005    5    3    0    2    8    3    0]\n",
+            " [   0    0    3  985    0    5    0    2    5   10]\n",
+            " [   1    1    2    0  958    0    5    5    1    9]\n",
+            " [   2    0    2   11    2  859    3    0    8    5]\n",
+            " [   3    2    0    0    4    7  938    0    4    0]\n",
+            " [   1    3    7    3    0    0    0 1006    3    5]\n",
+            " [   5    0    2    9    3    3    3    3  943    3]\n",
+            " [   2    2    0    8   10    4    0    5    5  973]]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
